TFS-223 groupList.html add for professor role

--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -111,6 +111,7 @@
 
 #tab_1:checked ~ #timetabel_label, 
 #tab_2:checked ~ #search_label,
-#tab_3:checked ~ #lesson_label,
-#tab_4:checked ~ #parser_label,
-#tab_5:checked ~ #settings_label { background: rgba(0, 0, 0, .2); }
+#tab_3:checked ~ #group_label,
+#tab_4:checked ~ #lesson_label,
+#tab_5:checked ~ #parser_label,
+#tab_6:checked ~ #settings_label { background: rgba(0, 0, 0, .2); }
