--- a/src/main/resources/static/templates/userSettings.html
+++ b/src/main/resources/static/templates/userSettings.html
@@ -34,7 +34,7 @@
             </td>
         </tr>
     </table>
-    <button id="saveSett" ng-click="savesettings()" style="margin-top: -20px" class="buttonClass">Сохранить изменения</button>
+    <button id="saveSett" ng-click="savesettings()"  class="buttonClass">Сохранить изменения</button>
     <br>
     <span class="register-fields2" style="font-style: italic" ng-show="messShow">Данные успешно сохранены</span>
 
