--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -6,6 +6,62 @@
     padding: 10px;
     margin: 20px;
 }
+
+.studtableStyle {
+    border-radius: 15px;
+    min-height: 100%;
+    padding: 10px;
+    margin: 0 auto;
+
+}
+.studtableStyle-table {
+
+}
+
+.studtableStyle table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 17px;
+    text-align: left;
+    border-collapse: collapse;
+    border-radius: 20px;
+    box-shadow: 0 0 0 10px #F2906B;
+    color: #452F21;
+    margin: 30px auto;
+    background-color: white;
+    display: inline-block;
+    overflow: auto;
+    max-height: 450px;
+    /*max-width: ;*/
+}
+
+.studtableStyle th {
+    padding: 10px 8px;
+    background: white;
+    text-align: center;
+}
+
+.studtableStyle table th:first-child {
+    border-top-left-radius: 20px;
+}
+
+.studtableStyle table th:last-child {
+    border-top-right-radius: 20px;
+}
+
+.studtableStyle td {
+    border-top: 10px solid #F2906B;
+    padding: 8px;
+    background: white;
+}
+
+.studtableStyle table td:first-child {
+    border-bottom-left-radius: 20px;
+}
+
+.studtableStyle table td:last-child {
+    border-bottom-right-radius: 20px;
+}
+
 .timetableStyle tr{
     background-color: crimson;
     border-radius: 15px;
