--- a/src/main/resources/static/css/addLessonForm.css
+++ b/src/main/resources/static/css/addLessonForm.css
@@ -5,7 +5,7 @@
     border-color: black;
     top: 0;
     text-align: center;
-    height: 460px;
+    min-height: 460px;
     border-radius: 25px;
     bottom: 0;
     left: 0;
