--- a/src/main/resources/static/templates/groupList.html
+++ b/src/main/resources/static/templates/groupList.html
@@ -1,16 +1,15 @@
 <div class="studtableStyle" ng-show="studentsTableShow">
     <div class="searchBlock"><div ><span>Начните вводить номер группы: </span><input id="searchDead" type="text" class="search-input" style="width: 250px; margin-bottom: 20px" spellcheck="false"></div>
     </div>
-<!--    <div ng-show="studShow" class="studtableStyle-table">-->
     <table ng-show="studShow">
-        <tr>
-            <th>
+        <thead>
+            <th >
                 <span>ФИО</span>
             </th>
             <th>
                 <span>Телефон</span>
             </th>
-        </tr>
+        </thead>
         <tbody ng-repeat="student in students">
         <tr>
             <td ng-if="student.role === 4">{{student.name}}</td>
@@ -19,5 +18,4 @@
         </tr>
         </tbody>
     </table>
-<!--    </div>-->
 </div>
