--- a/src/main/resources/static/templates/positionsBox.html
+++ b/src/main/resources/static/templates/positionsBox.html
@@ -1,5 +1,5 @@
 <ul style="margin-left: 0px; padding: 0px;">
-    <li ng-repeat="position in positions track by $index" style="display: inline-block; list-style-type: none; border: 1px solid #000; margin-right: -5px; ">
+    <li ng-repeat="position in positions track by $index" style="list-style-type: none; border: 1px solid #000; margin-right: -5px; ">
         <span ng-if="position.status" style="font-size: 13pt;" ng-click="deletePos(position.num)">{{position.label}}</span>
         <span ng-if="!position.status" style="font-size: 13pt; color: red;" title="{{position.errmessage}}" ng-click="deletePos(position.num)">{{position.label}}</span>
     </li>
