--- a/src/main/resources/static/templates/universitySettingsBlock.html
+++ b/src/main/resources/static/templates/universitySettingsBlock.html
@@ -95,50 +95,45 @@
         <tr class="lesson-tr">
             <td>1</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position1" type="text">
+                <input id="posLes1" class="lesson-input" ng-model="uniData.lessonGridPosition.position1" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>2</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position2" type="text">
+                <input id="posLes2" class="lesson-input" ng-model="uniData.lessonGridPosition.position2" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>3</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position3" type="text">
+                <input id="posLes3" class="lesson-input" ng-model="uniData.lessonGridPosition.position3" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>4</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position4" type="text">
+                <input id="posLes4" class="lesson-input" ng-model="uniData.lessonGridPosition.position4" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>5</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position5" type="text">
+                <input id="posLes5" class="lesson-input" ng-model="uniData.lessonGridPosition.position5" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>6</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position6" type="text">
+                <input id="posLes6" class="lesson-input" ng-model="uniData.lessonGridPosition.position6" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>7</td>
             <td>
-                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position7" type="text">
+                <input id="posLes7" class="lesson-input" ng-model="uniData.lessonGridPosition.position7" type="text">
             </td>
         </tr>
-        <script>
-            $(function () {
-                $(".lesson-input").mask("99:99");
-            });
-        </script>
     </table>
     <div class="divLine">
         <button id="returnButtonUni" ng-show="returnShow" ng-click="return()" class="buttonClass" style="font-size: 22px">Назад</button>
