TFS-226 ParserService added + parser.html

--- a/src/main/resources/static/templates/addLessonForm.html
+++ b/src/main/resources/static/templates/addLessonForm.html
@@ -83,7 +83,8 @@
                 <position-box></position-box>
             </td>
             <td rowspan="2" style="text-align: center; width: 400px">
-                <button id="addLesBut" class="buttonClass" style="margin: 0 auto" ng-click="showLesson()">Проверить позиции</button>
+                <button id="checkLesBut" class="buttonClass" style="margin: 0 auto" ng-click="checkPositions()">Проверить корректность</button>
+                <button id="addLesBut" class="buttonClass" style="margin: 0 auto; margin-top: 8px;" ng-click="addLesson()">Добавить занятие</button>
             </td>
         </tr>
         </tr>
