--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -12,7 +12,7 @@
     min-height: 100%;
     padding: 10px;
     margin: 0 auto;
-
+    width: 550px;;
 }
 
 .studtableStyle-table {
@@ -29,7 +29,7 @@
     color: #452F21;
     margin: 30px auto;
     background-color: white;
-    width: 540px;
+    width: 550px;
     display: inline-block;
     overflow: auto;
     max-height: 500px;
