TFS - 230 Fix addLessonForm

--- a/src/main/resources/static/templates/addLessonForm.html
+++ b/src/main/resources/static/templates/addLessonForm.html
@@ -3,7 +3,8 @@
         <table style="max-width: 200px">
             <tr>
                 <td>
-                    <table id="pos-table">
+                    <table id="pos-table" >
+                        <caption><p>Выберите позиции пары:</p></caption>
                         <tr class="groupAddBlock-field">
                             <td><p>Номер недели:</p></td>
                             <td>
@@ -83,7 +84,7 @@
                 <position-box></position-box>
             </td>
             <td rowspan="2" style="text-align: center; width: 400px">
-                <button id="checkLesBut" class="buttonClass" style="margin-left: -350px" ng-click="checkPositions()">Проверить корректность</button>
+                <button id="checkLesBut" class="buttonClass" style="margin-left: -80px" ng-click="checkPositions()">Проверить корректность</button>
                 <button id="addLesBut" class="buttonClass" style="margin-left: 10px" ng-click="addLesson()">Добавить занятие</button>
             </td>
         </tr>
