--- a/src/main/resources/static/templates/groupList.html
+++ b/src/main/resources/static/templates/groupList.html
@@ -1,5 +1,9 @@
 <div class="studtableStyle" ng-show="studentsTableShow">
-    <div class="searchBlock"><div ><span>Начните вводить номер группы: </span><input id="searchDead3" type="text" class="search-input" style="width: 250px; margin-bottom: 20px" spellcheck="false"></div>
+    <div class="searchBlock">
+        <div>
+            <span>Начните вводить номер группы: </span>
+            <input id="searchDead3" type="text" class="search-input" style="width: 250px; margin-bottom: 20px" spellcheck="false">
+        </div>
     </div>
     <table id="studTableId" style="min-width: 570px" ng-show="studShow">
         <thead>
