TFS-231 updateLessonForm.html in process

--- a/src/main/resources/static/templates/updateLessonForm.html
+++ b/src/main/resources/static/templates/updateLessonForm.html
@@ -1,18 +1,16 @@
-<div class="addLessonBlock" style="max-width: 400px">
-    <div class="groupAddBlock" style="max-width: 450px">
-        <table id="pos-table" >
+<div class="addLessonBlock" style="max-width: 350px">
+    <div class="groupAddBlock" style="max-width: 350px">
+        <table>
             <tr class="groupAddBlock-field" >
-                <td colspan="2"><p style="text-align: center">Аудитория:</p></td>
-            </tr>
-            <tr>
-                <td colspan="2"><input type="text" id="classroom" spellcheck="false" style="width: 400px"/></td>
+                <td><p style="text-align: center">Аудитория:</p></td>
+                <td><input type="text" id="classroom" spellcheck="false" style="width: 400px"/></td>
             </tr>
             <tr><td colspan="2"><p>Позиции пары:</p></td></tr>
             <tr class="groupAddBlock-field">
                 <td><p>Номер недели:</p></td>
                 <td>
                     <input type="number" id="week" min="0" max="{{weeks}}" ng-model="week" value="1" step="1">
-                    <span style="font-size: 11pt">0-все недели</span>
+                    <br><span style="font-size: 11pt">0-все недели</span>
                 </td>
             </tr>
             <tr class="groupAddBlock-field">
@@ -33,17 +31,18 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <button class="buttonClass" id="addPosBut" ng-click="addPosition()">Добавить</button>
+                    <button class="buttonClass" id="addPosBut" ng-click="addPosition()">Добавить позицию</button>
                 </td>
             </tr>
             <tr>
-                <td rowspan="2" style="width: 200px">
+                <td rowspan="2" style="width: 200px" id="pos-table">
                     <position-box></position-box>
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
-                    <button id="checkLesBut" class="buttonClass" style="margin-left: -80px" ng-click="checkPositions()">Проверить корректность</button>
+                    <button id="checkLesBut" class="buttonClass" style="margin-left: 10px; margin-bottom: 10px; padding: 4px" ng-click="checkPositions()">Проверить<br> корректность</button>
+                    <br>
                     <button id="addLesBut" class="buttonClass" style="margin-left: 10px" ng-click="updateLesson()">Сохранить</button>
                 </td>
             </tr>
