--- a/src/main/resources/static/templates/modalWindow.html
+++ b/src/main/resources/static/templates/modalWindow.html
@@ -2,6 +2,7 @@
     <div class="popup">
         <button class="popup-close" ng-click="closeInfo()">Закрыть</button>
         <button ng-if="checkLess()" class="popup-cancel" ng-click="cancelLesson()">Отменить</button>
+        <button ng-if="checkLessToUpdate()" class="popup-cancel" ng-click="updateLesson()">Перенести</button>
         <span>      <br>Дисциплина: {{lessonToView.subject}} <br> </span>
         <span> Тип: {{lessonToView.lessonType}} <br> </span>
         <span ng-show="groupShow">           Группа: {{lessonToView.group}} <br> </span>
