TFS-231 updateLessonForm.html in process

--- a/src/main/resources/static/templates/universitySettingsBlock.html
+++ b/src/main/resources/static/templates/universitySettingsBlock.html
@@ -20,14 +20,14 @@
                     <td colspan="3">
                         <table style="width: 100%">
                             <tr >
-                                <td><input style="width: 78px" placeholder="000000" ng-model="uniData.color1" type="text" id="color1" class="register-input" style="width: 60px;">
+                                <td><input style="width: 78px" placeholder="000000" ng-model="uniData.color1" title="цвет фона" type="text" id="color1" class="register-input" style="width: 60px;">
                                 </td>
 
                                 <td>
-                                    <input style="width: 78px" placeholder="000000" ng-model="uniData.color2" type="text" id="color2" class="register-input" style="width: 60px;">
+                                    <input style="width: 78px" placeholder="000000" ng-model="uniData.color2" title="цвет страниц" type="text" id="color2" class="register-input" style="width: 60px;">
                                 </td>
                                 <td>
-                                    <input style="width: 78px" placeholder="000000" ng-model="uniData.color3" type="text" id="color3" class="register-input" style="width: 60px;">
+                                    <input style="width: 78px" placeholder="000000" ng-model="uniData.color3" title="цвет кнопок" type="text" id="color3" class="register-input" style="width: 60px;">
                                 </td>
                             </tr>
                         </table>
