TFS-231 updateLessonForm.html in process

--- a/src/main/resources/static/templates/updateLessonForm.html
+++ b/src/main/resources/static/templates/updateLessonForm.html
@@ -37,7 +37,7 @@
                 <td colspan="2" style="padding-top: 20px">
                     <button id="checkLesBut" class="buttonClass" style="margin-left: 10px; margin-bottom: 10px; padding: 4px" ng-click="checkPositions()">Проверить<br> корректность</button>
                     <br>
-                    <button id="addLesBut" class="buttonClass" style="margin-left: 10px" ng-click="updateLesson()">Сохранить</button>
+                    <button id="addLesBut" class="buttonClass" style="margin-left: 10px" ng-click="updateLesson()">Перенести</button>
                 </td>
             </tr>
         </table>
