TFS-227 lessonAdd checked - works correctly

--- a/src/main/resources/static/templates/addLessonForm.html
+++ b/src/main/resources/static/templates/addLessonForm.html
@@ -38,32 +38,32 @@
                 </td>
                 <td>
                     <table>
-                        <tr class="groupAddBlock-field">
+                        <tr class="groupAddBlock-field" ng-show="showDispFields">
                             <td><p>Преподаватель:</p></td>
                             <td>
                                 <input type="text" id="teacher" spellcheck="false" style="width: 300px"/>
                             </td>
                         </tr>
-                        <tr class="groupAddBlock-field">
+                        <tr class="groupAddBlock-field" >
                             <td><p>Аудитория:</p></td>
                             <td>
                                 <input type="text" id="classroom" spellcheck="false" style="width: 300px"/>
                             </td>
                         </tr>
-                        <tr class="groupAddBlock-field">
+                        <tr class="groupAddBlock-field" ng-show="showDispFields">
                             <td><p>Группы:</p></td>
                             <td>
                                 <input type="text" id="groups" spellcheck="false" style="width: 300px"/>
                                 `       <group-box></group-box>
                             </td>
                         </tr>
-                        <tr class="groupAddBlock-field">
+                        <tr class="groupAddBlock-field" ng-show="showDispFields">
                             <td><p>Дисциплина:</p></td>
                             <td>
                                 <input type="text" id="subject" spellcheck="false" style="width: 300px"/>
                             </td>
                         </tr>
-                        <tr class="groupAddBlock-field">
+                        <tr class="groupAddBlock-field" ng-show="showDispFields">
                             <td><p>Тип занятия:</p></td>
                             <td>
                                 <select id="type">
