--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -119,7 +119,7 @@
     min-height: 180px;
     /*min-width: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*7.5);*/
     /*max-width: auto;*/
-    width: 180px;
+    min-width: 180px;
     vertical-align: top;
 }
 
@@ -142,6 +142,16 @@
     border-radius: 10px;
 }
 
+.dayName2{
+    background-color: #adadad;
+    margin-top: 10px;
+    width: 30px;
+    height: 20px;
+    padding: 5px;
+    font-size: 14pt;
+    border-radius: 10px;
+}
+
 .day li, span{
     max-height: 60px;
     /*font-size: 13pt;*/
@@ -160,12 +170,25 @@
 }
 
 .day p{
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
     font-size: 15pt;
     white-space: nowrap; /* Запрещаем перенос строк */
     overflow: hidden; /* Обрезаем все, что не помещается в область */
-    background: #fc0; /* Цвет фона */
     padding: 5px; /* Поля вокруг текста */
     text-overflow: ellipsis; /* Добавляем многоточие */
+}
+
+.day ul{
+    margin-top: 5px;
+    padding-left: 8px;
+}
+
+.day ul li{
+    margin-top: 5px;
 }
 
 .days {
