--- a/src/main/resources/static/templates/parser.html
+++ b/src/main/resources/static/templates/parser.html
@@ -1,6 +1,6 @@
 <div class="register-fields2" id="parserDivId" style="min-width: 520px">
-    <span>Данна форма позволяет добавить новые данные в систему. <br>Ниже вы найдёте ссылку на скачивание шаблона.
-    <br> Помесите заполненный документ на Яндекс диск <br>и укажите публичную ссылек на него в поле ниже</span>
+    <span>Данная форма позволяет добавить новые данные в систему. <br>Ниже вы найдёте ссылку на скачивание шаблона.
+    <br> Помесите заполненный документ на Яндекс.Диск <br>и укажите публичную ссылек на него в поле ниже.</span>
     <table style="margin-top: 20px">
         <tr>
             <td>
