--- a/src/main/resources/static/templates/timetable.html
+++ b/src/main/resources/static/templates/timetable.html
@@ -5,12 +5,22 @@
         <button ng-click="inc_week()">></button>
     </div>
     <div class="days">
-        <div class="day" ng-repeat="day in days2 track by $index" style="display: inline-block;"> <span class="dayName">{{day.dayName}}</span>
-            <ul ng-if="day.infoLessonDtos.length != 0">
-                <li ng-if="lesson.status" ng-repeat="lesson in day.infoLessonDtos track by $index"> <span ng-click="show(lesson)"> {{lesson.time}}: <b title="{{lesson.lessonType}}" style="">{{lesson.arc}} </b></span> </li>
-                <li ng-if="!lesson.status" ng-repeat="lesson in day.infoLessonDtos track by $index"> <span style="text-decoration: line-through" ng-click="show(lesson)"> {{lesson.time}}: <b title="{{lesson.lessonType}}" style="">{{lesson.arc}} </b></span> </li>
-            </ul>
-            <span ng-if="day.infoLessonDtos.length === 0"><br><br>Занятий нет</span>
+        <div class="day" ng-repeat="day in days2 track by $index" style="display: inline-block;">
+<!--            <table class="day" ng-repeat="day in days2 track by $index" style="display: inline-block;">-->
+<!--                <tr>-->
+<!--                    <td>-->
+<!--                        <p style="width: 20px">{{day.dayName}}</p>-->
+<!--                    </td>-->
+<!--                    <td>-->
+                        <span class="dayName" style="margin-bottom: 5px">{{day.dayName}} {{day.date}}</span> <br><br>
+                        <ul ng-if="day.infoLessonDtos.length != 0" ng-repeat="lesson in day.infoLessonDtos track by $index">
+                            <li ng-if="lesson.status"> <span ng-click="show(lesson)"> {{lesson.time}}: <b title="{{lesson.lessonType}}" style="">{{lesson.arc}} </b></span> </li>
+                            <li ng-if="!lesson.status"> <span style="text-decoration: line-through" ng-click="show(lesson)"> {{lesson.time}}: <b title="{{lesson.lessonType}}" style="">{{lesson.arc}} </b></span> </li>
+                        </ul>
+                        <span ng-if="day.infoLessonDtos.length === 0"><br><br>Занятий нет</span>
+<!--                    </td>-->
+<!--                </tr>-->
+<!--            </table>-->
         </div>
     </div>
     <info-box ng-show="infoShow"></info-box>
