TFS-233 Notifications done

--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -116,7 +116,7 @@
     margin-right: 12px;
     margin-top: 35px;
     border: 1px solid #fff; 
-    background-color: darkkhaki;
+    background-color: #c0a16b;
     border-radius: 10px;
     /*min-height: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*8);*/
     min-height: 180px;
