--- a/src/main/resources/static/templates/addLessonForm.html
+++ b/src/main/resources/static/templates/addLessonForm.html
@@ -84,7 +84,7 @@
                 <position-box></position-box>
             </td>
             <td rowspan="2" style="text-align: center; width: 400px">
-                <span ng-if="messageShow">{{messageInfo}}</span><br>
+                <span ng-if="messageShow" style="margin-bottom: 10px">{{messageInfo}}</span><br>
                 <button id="checkLesBut" class="buttonClass" style="margin-left: -80px" ng-click="checkPositions()">Проверить корректность</button>
                 <button id="addLesBut" class="buttonClass" style="margin-left: 10px" ng-click="addLesson()">Добавить занятие</button>
             </td>
