TFS-234 stable to view A.V.Eroshkin

--- a/src/main/resources/static/templates/parser.html
+++ b/src/main/resources/static/templates/parser.html
@@ -12,8 +12,8 @@
             </td>
         </tr>
         <trt>
-            <td colspan="2" ng-show="messageParserShow">
-                {{messageParser}}
+            <td colspan="2" ng-show="messageParserShow" style="text-align: center">
+                <p style="width: 250px">{{messageParser}}</p>
             </td>
         </trt>
     </table>
